k8s/applications/errors/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: errors
spec:
  selector:
    matchLabels:
      app: errors
  template:
    metadata:
      labels:
        app: errors
    spec:
      containers:
        - name: errors
          image: nginx:1.31.1
          ports:
            - name: ingress
              containerPort: 80
          volumeMounts:
            - name: errors
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: errors
              mountPath: /usr/share/nginx/html/401.html
              subPath: 401.html
      volumes:
        - name: errors
          configMap:
            name: errors
      resources:
        limits:
          memory: 128Mi
        requests:
          cpu: 10m
          memory: 128Mi
