k8s/applications/errors/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: errors
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
