k8s/applications/errors/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: errors-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      priority: 1
      services:
        - name: errors
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: errors-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      priority: 1
      services:
        - name: errors
          port: 80
